example/lib/src/l10n/errors/app_sk.arb
{
  "@@locale": "sk",
  "error": "Došlo k chybe",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Nastala neočakávaná chyba",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Hlášenie o chybách bolo úspešne odoslané.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}